MB
Maven goals instead of ANT scripts
Visualization of test report